Fix cards on mobile

--- a/scss/partials/_eindgesprek.scss
+++ b/scss/partials/_eindgesprek.scss
@@ -42,6 +42,10 @@
     max-width: calc(var(--layout-max-width) - 20rem);
     width: 100%;
 
+    @media only screen and (max-width: 768px) {
+        margin: 4%;
+    }
+
     &.right {
         float: right;
     }
@@ -58,14 +62,11 @@
     }
     img {
         transition: all .6s;
-
-        @media only screen and (min-width: 512px) {
-            &:not(.no-hover):hover {
-                transform: scale(1.5) translate(-15%, 0);
-                position: relative;
-            }
+        &:not(.no-hover):hover {
+            transform: scale(1.5) translate(-15%, 0);
+            position: relative;
         }
-        @media only screen and (max-width: 512px) {
+        @media only screen and (max-width: 768px) {
             &:not(.no-hover):hover {
                 transform: scale(1.4) translate(2%, 0);
                 position: relative;
